Switched get(0) to getFirst()